# CashUp

./: .env.example  .gitignore  CLAUDE.md  DATABASE_CONFIG.md  FINAL_SYSTEM_STATUS_REPORT.md  GEMINI.md  Makefile  PROJECT_ALL_IN_ONE.md  PROJECT_RULES.md  README.md  README_ENVIRONMENT.md  SETUP_COMPLETE.md  SYSTEM_STATUS_REPORT.md  SYSTEM_TEST_REPORT.md  check_table_structure.py  claude_plan.md  docker-compose.yml  notification_service_test_report_20250824_193200.json  setup_env.sh  start_project.sh  test_notification_service_api.py  test_system.sh  to_be_configured.md
.vercel/: project.json
CashUp_v2/apps/core/: celery_app.py  main.py  pyproject.toml  requirements.txt  simple_login.py  simple_main.py
CashUp_v2/apps/core/api/: deps.py
CashUp_v2/apps/core/config/: settings.py
CashUp_v2/apps/core/database/: connection.py  redis.py
CashUp_v2/apps/core/events/: notifications.py  rabbitmq.py
CashUp_v2/apps/core/models/: news.py
CashUp_v2/apps/core/schemas/: __init__.py  auth.py  config.py
CashUp_v2/apps/core/services/: __init__.py
CashUp_v2/apps/core/tasks/: market_collector.py  news_correlation.py  rss.py  scheduler.py  sync.py
CashUp_v2/apps/core/tests/: test_metrics.py  test_scheduler_status.py
CashUp_v2/apps/core/utils/: crypto.py  logger.py
backend/config-service/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  init.sql  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/config-service/app/: __init__.py
backend/config-service/app/api/: __init__.py
backend/config-service/app/core/: __init__.py  cache.py  config.py  database.py  exceptions.py
backend/config-service/app/middleware/: __init__.py  auth.py  logging.py
backend/config-service/app/models/: __init__.py  config.py
backend/config-service/app/schemas/: __init__.py  config.py
backend/config-service/app/services/: __init__.py  config_service.py  template_service.py
backend/config-service/app/utils/: __init__.py  dependencies.py  helpers.py
backend/market-service/: Dockerfile  pyproject.toml
backend/market-service/app/: __init__.py  main.py
backend/market-service/app/api/: __init__.py  indicators.py  market_data.py
backend/market-service/app/core/: config.py  database.py  logging.py  redis.py
backend/market-service/app/models/: __init__.py  market_data.py
backend/market-service/app/services/: __init__.py  market_service.py
backend/monitoring-service/: Dockerfile  init_db.py  main.py  pyproject.toml  requirements.txt
backend/monitoring-service/app/: __init__.py  main.py
backend/monitoring-service/app/api/: __init__.py
backend/monitoring-service/app/core/: __init__.py  cache.py  config.py  database.py  exceptions.py  logging.py  middleware.py  security.py
backend/monitoring-service/app/middleware/: __init__.py  monitoring.py  rate_limit.py  request_id.py  security.py
backend/monitoring-service/app/models/: __init__.py  alerts.py  base.py  dashboard.py  health.py  metrics.py  system.py
backend/monitoring-service/app/schemas/: __init__.py  alerts.py  common.py  dashboard.py  health.py  metrics.py  system.py
backend/monitoring-service/app/services/: __init__.py  alerts_service.py  dashboard_service.py  health_service.py  metrics_service.py  system_service.py
backend/notification-service/: Dockerfile  PUSHPLUS_GUIDE.md  README.md  __init__.py  docker-compose.yml  final_integration_test.py  main.py  pushplus_requests_test.py  pyproject.toml  qanotify_integration_verification_report.md  quick_test.py  requirements.txt  simple_pushplus_test.py  simple_qanotify_integration_test.py  simple_qanotify_test.py  test_notification_service_qanotify.py  test_notifications.py  test_pushplus_integration.py  test_qanotify_integration.py  test_qanotify_method.py  verify_qanotify_integration.py
backend/notification-service/app/: __init__.py  main.py
backend/notification-service/app/api/: __init__.py
backend/notification-service/app/core/: auth.py  config.py  database.py  exceptions.py  middleware.py
backend/notification-service/app/models/: __init__.py  channel.py  notification.py  template.py
backend/notification-service/app/schemas/: __init__.py  channel.py  common.py  notification.py  template.py
backend/notification-service/app/services/: __init__.py  channel_service.py  notification_service.py  scheduler_service.py  sender_service.py  template_service.py  websocket_service.py
backend/order-service/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  init-db.sql  main.py  pyproject.toml
backend/order-service/alembic/: env.py
backend/order-service/alembic/versions/: __init__.py
backend/order-service/app/: __init__.py
backend/order-service/app/api/: __init__.py
backend/order-service/app/core/: __init__.py  auth.py  config.py  database.py  exceptions.py  logging.py  middleware.py
backend/order-service/app/models/: __init__.py  order.py
backend/order-service/app/schemas/: __init__.py  order.py
backend/order-service/app/services/: __init__.py  exchange_client.py  notification_service.py  order_service.py
backend/strategy-service/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/strategy-service/app/: __init__.py
backend/strategy-service/app/api/: __init__.py
backend/strategy-service/app/core/: cache.py  config.py  database.py  dependencies.py
backend/strategy-service/app/middleware/: __init__.py  cors.py  error_handler.py  logging.py  security.py
backend/strategy-service/app/models/: strategy.py
backend/strategy-service/app/schemas/: strategy.py
backend/trading-service/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/trading-service/alembic/: env.py
backend/trading-service/app/: main.py
backend/user-service/: Dockerfile  README.md  TEST_REPORT.md  main.py  pyproject.toml  test_user_api.py
backend/user-service/app/: __init__.py
backend/user-service/scripts/: init_db.py  start.py  test_api.py
backend/user-service/test_env/: pyvenv.cfg
(+476 files in other folders)
