[project]
name = "cashup-market-service"
version = "1.0.0"
description = "CashUp量化交易系统 - 行情服务"
requires-python = ">=3.12"
dependencies = [
    # 基础共享依赖
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "asyncpg>=0.29.0",
    "alembic==1.12.1",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    # 行情服务特有依赖
    "redis==5.0.1",
    "websockets==12.0",
    "ccxt>=4.0.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "aiohttp==3.9.1",
    "aiofiles==23.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]