[project]
name = "cashup-monitoring-service"
version = "1.0.0"
description = "CashUp量化交易系统 - 监控服务"
requires-python = ">=3.11"
dependencies = [
    # 基础共享依赖
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "alembic==1.12.1",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    # 监控服务特有依赖
    "redis==5.0.1",
    "prometheus-client==0.19.0",
    "prometheus-fastapi-instrumentator==6.1.0",
    "psutil==5.9.6",
    "loguru==0.7.2",
    "PyJWT==2.8.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "aiohttp==3.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]